...
          <View style={styles.containerStyle}>
            <TextInput
              placeholder="Add your quick reply title"
              value={this.state.title}
              onChangeText={this.onTitleChange}
              maxLength={42}
              testID="title-input"
            />
            <TextInput
              placeholder="Add your quick reply content"
              multiline
              value={this.state.description}
              onChangeText={this.onDescriptionChange}
              blurOnSubmit
              maxLength={420}
              testID="description-input"
            />
          </View>
        </View>
      );
    }
}
...
